--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,11 @@ name: Trigger auto deployment
 on:
   # 手動実行用トリガー
   workflow_dispatch:      
+  
+# Add env
+env:
+  CONTAINER_REGISTRY:  handson01repo12345.azurecr.io
+  
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -19,3 +24,11 @@ jobs:
       - name: Confirm if env have REPOSITORY_NAME
         run: |
           echo ${{ env.REPOSITORY_NAME }}
+      # Add a step
+      - name: Log in to container registry
+        # 認証処理を行うためのアクション
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.CONTAINER_REGISTRY }}
+          username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
+          password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
